--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web-unlocked-starter-project",
+  "name": "gatsby-starter-hello-world",
   "private": true,
   "description": "A simplified bare-bones starter for Gatsby",
   "version": "0.1.0",
@@ -14,15 +14,19 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.0.5",
+    "classnames": "^2.2.6",
+    "eslint": "^7.14.0",
+    "framer-motion": "^2.9.4",
     "gatsby": "^2.20.3",
     "gatsby-plugin-less": "^3.1.1",
     "gatsby-plugin-sass": "^2.2.1",
+    "gsap": "^3.6.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-loadable": "^5.5.0"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
