--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "classnames": "^2.2.6",
     "eslint": "^7.14.0",
     "framer-motion": "^2.9.4",
@@ -26,7 +28,8 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-loadable": "^5.5.0"
+    "react-loadable": "^5.5.0",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
